<resources>
    <string name="app_name">gps-app-front</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_profile">navigation profile</string>
    <string name="navigation_collections">navigation collections</string>
    <string name="navigation_home">navigation home</string>
    <string name="navigation_locations">navigation locations</string>
    <string name="profile">Profile</string>
    <string name="collections">Collections</string>
    <string name="locations">Locations</string>
    <string name="home">home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">all</string>
    <string name="search">Search</string>
    <string name="search_collection">Search collection</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="user204">user204</string>
    <string name="login_register">Login/Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="password_hint">******************</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="hugo">HUGO</string>
    <string name="delete_account">Delete Account</string>
    <string name="not_a_valid_firstname">Not a valid firstName</string>
    <string name="not_a_valid_lastname">Not a valid lastName</string>
    <string name="not_a_valid_email">Email should be like : toto@domaine.com</string>
    <string name="not_a_valid_password">Password must be >5 characters</string>
    <string name="doesn_t_match_entred_password">Doesn\'t match entred password</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_failed_username_already_used">Register failed : userName already used</string>
    <string name="register_success_for_user">"Register success for user "</string>
    <string name="authentication_is_required">Authentication is required</string>
    <string name="you_should_login">You should login</string>
    <string name="user204_gmail_com">user204@gmail.com</string>
    <string name="open_in_maps">Open in maps</string>
    <string name="map_api_key">AIzaSyC3k07a5IuDTXYGzVn8VIib51INjf8Uw8c</string>
</resources>