<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/d0d9d4"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/d0d9d4">

        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/back_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back_fleche"
                app:tint="#FFFFFF" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/switchLoginButton"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/item_register_login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/color_register_login_text" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/item_register_login"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="@color/color_register_login_text" />

                <View
                    android:id="@+id/indicator"
                    android:layout_width="180dp"
                    android:layout_height="4dp"
                    android:background="#319371" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/first_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/first_name"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="Victor"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/last_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/last_name"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="@string/hugo"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="@string/user204"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="@string/user204_gmail_com"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/prompt_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="@string/password_hint"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="@string/password_hint"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>