<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/d0d9d4"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

<<<<<<< Updated upstream
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/d0d9d4">

        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/logologin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:src="@drawable/back_fleche"
                app:tint="#FFFFFF" />

        </LinearLayout>

        <View
            android:id="@+id/logologin"
            android:layout_width="190dp"
            android:layout_height="187dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/logo_gps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logologin"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/item_register_login"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/color_register_login_text" />

                <View
                    android:id="@+id/indicator"
                    android:layout_width="180dp"
                    android:layout_height="4dp"
                    android:background="#319371"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/switchRegisterButton"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/item_register_login"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/color_register_login_text" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="@string/user204"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:background="@color/f5eff7"
            android:text="@string/prompt_password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_champs_login_register"
            android:hint="******************"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
=======
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
>>>>>>> Stashed changes
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/login"
<<<<<<< Updated upstream
            android:layout_width="match_parent"
=======
            android:layout_width="wrap_content"
>>>>>>> Stashed changes
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
<<<<<<< Updated upstream
            android:text="@string/login"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
=======
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
>>>>>>> Stashed changes
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

<<<<<<< Updated upstream
    </androidx.constraintlayout.widget.ConstraintLayout>
=======
    </LinearLayout>
>>>>>>> Stashed changes


</ScrollView>